--- a/app/src/main/res/layout/dialog_calculator.xml
+++ b/app/src/main/res/layout/dialog_calculator.xml
@@ -100,7 +100,7 @@
                 android:id="@+id/btn1"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="1" />
 
@@ -108,7 +108,7 @@
                 android:id="@+id/btn2"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="2" />
 
@@ -116,7 +116,7 @@
                 android:id="@+id/btn3"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="3" />
 
@@ -124,7 +124,7 @@
                 android:id="@+id/btnDivide"
                 style="@style/CalculatorOperatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="÷" />
 
@@ -141,7 +141,7 @@
                 android:id="@+id/btn4"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="4" />
 
@@ -149,7 +149,7 @@
                 android:id="@+id/btn5"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="5" />
 
@@ -157,7 +157,7 @@
                 android:id="@+id/btn6"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="6" />
 
@@ -165,7 +165,7 @@
                 android:id="@+id/btnMultiply"
                 style="@style/CalculatorOperatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="×" />
 
@@ -182,7 +182,7 @@
                 android:id="@+id/btn7"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="7" />
 
@@ -190,7 +190,7 @@
                 android:id="@+id/btn8"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="8" />
 
@@ -198,7 +198,7 @@
                 android:id="@+id/btn9"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="9" />
 
@@ -206,7 +206,7 @@
                 android:id="@+id/btnSubtract"
                 style="@style/CalculatorOperatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="-" />
 
@@ -223,7 +223,7 @@
                 android:id="@+id/btnDot"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="." />
 
@@ -231,7 +231,7 @@
                 android:id="@+id/btn0"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="0" />
 
@@ -239,7 +239,7 @@
                 android:id="@+id/btn00"
                 style="@style/CalculatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="00" />
 
@@ -247,7 +247,7 @@
                 android:id="@+id/btnAdd"
                 style="@style/CalculatorOperatorButtonStyle"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="+" />
 
