--- a/app/src/main/res/layout/item_expense.xml
+++ b/app/src/main/res/layout/item_expense.xml
@@ -48,13 +48,19 @@
 
             <TextView
                 android:id="@+id/tvExpenseAmount"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:text="$25.50"
-                android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/error_color"
-                android:layout_marginEnd="8dp" />
+                android:layout_marginEnd="8dp"
+                android:maxLines="1"
+                android:gravity="end"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="14sp"
+                android:autoSizeMaxTextSize="18sp"
+                android:autoSizeStepGranularity="1sp" />
 
             <ImageButton
                 android:id="@+id/btnDeleteExpense"
