--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -47,42 +47,113 @@
     </style>
 
     <!-- Calculator Button Styles - Dark Theme -->
-    <style name="CalculatorButtonStyle" parent="Widget.Material3.Button.TonalButton">
+        <style name="CalculatorButtonStyle" parent="Widget.Material3.Button.TonalButton">
         <item name="android:layout_margin">6dp</item>
-            <item name="android:textSize">16sp</item>
         <item name="android:textColor">?attr/primaryTextColor</item>
         <item name="backgroundTint">?attr/colorSurfaceVariant</item>
         <item name="cornerRadius">16dp</item>
-        <item name="android:minHeight">60dp</item>
-        <item name="android:minWidth">60dp</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:minWidth">48dp</item>
         <item name="android:textStyle">normal</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
         <item name="android:gravity">center</item>
         <item name="android:ellipsize">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:autoSizeTextType">uniform</item>
+        <item name="android:autoSizeMinTextSize">12sp</item>
+        <item name="android:autoSizeMaxTextSize">20sp</item>
+        <item name="android:autoSizeStepGranularity">1sp</item>
+    </style>
+
+    <style name="CalculatorOperatorButtonStyle" parent="Widget.Material3.Button">
+        <item name="android:layout_margin">6dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">?attr/colorPrimary</item>
+        <item name="cornerRadius">16dp</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:minWidth">48dp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:ellipsize">none</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+        <item name="android:autoSizeTextType">uniform</item>
+        <item name="android:autoSizeMinTextSize">12sp</item>
+        <item name="android:autoSizeMaxTextSize">20sp</item>
+        <item name="android:autoSizeStepGranularity">1sp</item>
+    </style>
+
+    <!-- Neumorphic Button Styles - Dark Theme -->
+    <style name="NeumorphicButtonStyle" parent="Widget.Material3.Button">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/primaryTextColor</item>
+        <item name="backgroundTint">?attr/cardBackgroundColor</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:minHeight">56dp</item>
+        <item name="android:paddingHorizontal">24dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">4dp</item>
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetRight">0dp</item>
     </style>
 
-    <style name="CalculatorOperatorButtonStyle" parent="Widget.Material3.Button">
-        <item name="android:layout_margin">6dp</item>
+    <style name="NeumorphicButtonPrimaryStyle" parent="Widget.Material3.Button">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">?attr/colorPrimary</item>
-        <item name="cornerRadius">16dp</item>
-        <item name="android:minHeight">60dp</item>
-        <item name="android:minWidth">60dp</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:maxLines">1</item>
-        <item name="android:singleLine">true</item>
-        <item name="android:gravity">center</item>
-        <item name="android:ellipsize">none</item>
+        <item name="cornerRadius">20dp</item>
+        <item name="android:minHeight">56dp</item>
+        <item name="android:paddingHorizontal">24dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:elevation">6dp</item>
+        <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
         <item name="android:insetLeft">0dp</item>
         <item name="android:insetRight">0dp</item>
+    </style>
+
+    <style name="NeumorphicTextButtonStyle" parent="Widget.Material3.Button.TextButton">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">?attr/colorPrimary</item>
+        <item name="cornerRadius">16dp</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:paddingHorizontal">20dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="android:insetLeft">0dp</item>
+        <item name="android:insetRight">0dp</item>
+    </style>
+
+    <!-- Neumorphic Card Style - Dark Theme -->
+    <style name="NeumorphicCardStyle" parent="Widget.MaterialComponents.CardView">
+        <item name="cardCornerRadius">24dp</item>
+        <item name="cardElevation">8dp</item>
+        <item name="cardBackgroundColor">?attr/cardBackgroundColor</item>
+        <item name="android:layout_margin">16dp</item>
+    </style>
+
+    <!-- Neumorphic Input Field Style - Dark Theme -->
+    <style name="NeumorphicTextInputStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxCornerRadiusBottomEnd">16dp</item>
+        <item name="boxCornerRadiusBottomStart">16dp</item>
+        <item name="boxCornerRadiusTopEnd">16dp</item>
+        <item name="boxCornerRadiusTopStart">16dp</item>
+        <item name="boxStrokeWidth">2dp</item>
+        <item name="boxStrokeColor">?attr/colorOutline</item>
+        <item name="android:layout_marginBottom">20dp</item>
     </style>
 
 </resources>
