--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -72,6 +72,146 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <!-- Color Picker Section -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category Color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="?attr/primaryTextColor"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="12dp" />
+
+            <!-- Color Options Grid -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:layout_marginBottom="8dp">
+
+                <!-- First Row -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_marginBottom="8dp">
+
+                    <View
+                        android:id="@+id/colorOption1"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_green_selected"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption2"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_blue"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption3"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_orange"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption4"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_pink"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption5"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_purple"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                </LinearLayout>
+
+                <!-- Second Row -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <View
+                        android:id="@+id/colorOption6"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_red"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption7"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_teal"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption8"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_indigo"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption9"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_amber"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                    <View
+                        android:id="@+id/colorOption10"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="6dp"
+                        android:background="@drawable/color_circle_brown"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:elevation="2dp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
         <!-- Action Buttons -->
