--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,4 +11,9 @@
         android:icon="@android:drawable/ic_menu_recent_history"
         android:title="Expenses" />
     
+    <item
+        android:id="@+id/nav_categories"
+        android:icon="@android:drawable/ic_menu_sort_alphabetically"
+        android:title="Categories" />
+    
 </menu>
