--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,6 +16,9 @@
         <item name="colorOnBackground">@color/dark_primary_text</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <!-- Ensure proper window insets handling -->
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:fitsSystemWindows">false</item>
         <!-- Text colors -->
         <item name="android:textColorPrimary">@color/dark_primary_text</item>
         <item name="android:textColorSecondary">@color/dark_secondary_text</item>
@@ -142,7 +145,7 @@
         <item name="cardCornerRadius">24dp</item>
         <item name="cardElevation">8dp</item>
         <item name="cardBackgroundColor">?attr/cardBackgroundColor</item>
-        <item name="android:layout_margin">16dp</item>
+        <item name="android:layout_margin">8dp</item>
     </style>
 
     <!-- Neumorphic Input Field Style - Dark Theme -->
